Improve reset to default feature.

--- a/Resources/Changelogs/1.0.7.MD
+++ b/Resources/Changelogs/1.0.7.MD
@@ -2,4 +2,6 @@
 - Redesigned countdown timers
   - Added weeks indicator
   - Improved readability and space usage
-- 
+- Improved "Reset To Default"
+  - Now resets all settings to default correctly
+  - No longer resets window position/size
