Implement improved cache invalidation.
Now caches can have set invalidation times so that new data is pulled at more reasonable times.

--- a/Resources/Changelogs/1.0.7.MD
+++ b/Resources/Changelogs/1.0.7.MD
@@ -5,3 +5,7 @@
 - Improved "Reset To Default"
   - Now resets all settings to default correctly
   - No longer resets window position/size
+- Added points difference to the standings table
+- Notifications improvements
+  - Session notifications now more accurately report time
+- 
