Finished with the rate limiting basics.

--- a/Resources/Changelogs/1.0.7.MD
+++ b/Resources/Changelogs/1.0.7.MD
@@ -8,6 +8,4 @@
 - Added points difference to the standings table
 - Notifications improvements
   - Session notifications now more accurately report time
-- Standings & Calendar caches now become invalid and update after a race weekend has finished
-  - Exact times for this can be seen in the UI
-  - You can force an update at any time
+- API calls are no longer cached but are instead rate limited
