Provide feedback after application crashes.

--- a/Resources/Changelogs/1.0.7.MD
+++ b/Resources/Changelogs/1.0.7.MD
@@ -9,3 +9,6 @@
 - Notifications improvements
   - Session notifications now more accurately report time
 - API calls are no longer cached but are instead rate limited
+- Feedback provided after the application crashes
+  - Note: currently the window will hang open for a few seconds after a crash
+- 
