Add manual update check button.

--- a/Resources/Changelogs/1.1.0.MD
+++ b/Resources/Changelogs/1.1.0.MD
@@ -1,4 +1,5 @@
-﻿- Further improve update experience.
+﻿- Further improve update experience
+  - Add button to manually check for updates in settings
 - Redesigned countdown timers
   - Added weeks indicator
   - Improved readability and space usage
