--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -3,4 +3,7 @@
   - Included entire changelog history
   - Improved settings layout
   - Added settings for notifications
-- 
+- Session notification improvements
+  - Notifications will now only show once at the set times
+  - Fixed issue where enabling session notifications within 30 mins of the start of a session would always cause a notification to show again immediately
+- Fixed reset-to-default switching pages unexpectedly
