--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -6,4 +6,5 @@
 - Session notification improvements
   - Notifications will now only show once at the set times
   - Fixed issue where enabling session notifications within 30 mins of the start of a session would always cause a notification to show again immediately
-- Fixed reset-to-default switching pages unexpectedly
+- Fixed "reset to default" switching pages unexpectedly
+- Fixed sessions/races that have passed not being visually updated when the app was open
