Fixed standings table text clipping issue with minor layout change.

--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -6,5 +6,7 @@
 - Session notification improvements
   - Notifications will now only show once at the set times
   - Fixed issue where enabling session notifications within 30 mins of the start of a session would always cause a notification to show again immediately
+- Standings page improvements
+  - Adjusted layout slightly to prevent text cutting off
 - Fixed "reset to default" switching pages unexpectedly
 - Fixed sessions/races that have passed not being visually updated when the app was open
