--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -10,3 +10,4 @@
   - Adjusted layout slightly to prevent text cutting off
 - Fixed "reset to default" switching pages unexpectedly
 - Fixed sessions/races that have passed not being visually updated when the app was open
+- Fixed session times displaying as UTC instead of in local system time.
