Ignore fractional minutes, fixed a few bugs. Updated changelog

--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -1,13 +1,19 @@
-﻿- Settings page improvements
+﻿- Settings page
   - Moved credits & changelog to separate windows
   - Included entire changelog history
   - Improved settings layout
-  - Added settings for notifications
-- Session notification improvements
+  - Fixed "reset to default" switching pages unexpectedly
+- Notifications
+  - Notifications settings are now available
+    - Enable/disable for the entire app
+    - Enable/disable notification sound
   - Notifications will now only show once at the set times
   - Fixed issue where enabling session notifications within 30 mins of the start of a session would always cause a notification to show again immediately
-- Standings page improvements
+- Standings
   - Adjusted layout slightly to prevent text cutting off
-- Fixed "reset to default" switching pages unexpectedly
-- Fixed sessions/races that have passed not being visually updated when the app was open
-- Fixed session times displaying as UTC instead of in local system time.
+- Calendar
+  - Adjusted countdown clock so that it more accurately displays time remaining until session
+  - Fixed sessions/races that have passed not being visually updated when the app was open
+  - Fixed session times displaying as UTC instead of in local system time
+- Misc
+  - Added debug mode + debug window to improve run-time testing
