Implemented expanded notifications & settings for the calendar.

--- a/Resources/Changelogs/1.2.0.MD
+++ b/Resources/Changelogs/1.2.0.MD
@@ -4,10 +4,11 @@
   - Improved settings layout
   - Fixed "reset to default" switching pages unexpectedly
 - Notifications
-  - Notifications settings are now available
+  - Global notifications settings are now available
     - Enable/disable for the entire app
     - Enable/disable notification sound
   - Notifications will now only show once at the set times
+  - Added multiple different session notifications that can be enabled/disabled independently
   - Fixed issue where enabling session notifications within 30 mins of the start of a session would always cause a notification to show again immediately
 - Standings
   - Adjusted layout slightly to prevent text cutting off
