--- a/Resources/Changelogs/1.2.2.MD
+++ b/Resources/Changelogs/1.2.2.MD
@@ -1,1 +1,1 @@
-﻿- Fix bug preventing some notifications from showing
+﻿- Fix bug preventing some notifications from showing under some circumstances
